# TD_Realty_Social

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PLATFORM_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  run_dashboard.py
apps/dashboard/: index.html  package.json  requirements.txt  server.py
apps/dashboard/src/: App.jsx  index.css
cloudflare/: DEPLOYMENT.md  wrangler.toml
cloudflare/d1/: schema.sql
cloudflare/pages/: index.html
cloudflare/workers/: api.js
cloudflare/workers/domain-redirect/: wrangler.toml
cloudflare/workers/lead-ingestion/: wrangler.toml
data/samples/: contacts.csv
docker/: Caddyfile  Dockerfile.api  Dockerfile.dashboard  docker-compose.dev.yml  init-db.sql  nginx-dashboard.conf  nginx.conf
src/td_lead_engine/: __init__.py
src/td_lead_engine/ai/: __init__.py  chatbot.py  enrichment.py  follow_up.py  insights.py  predictions.py  property_matcher.py  recommendations.py  scripts.py
src/td_lead_engine/analytics/: __init__.py  forecasting.py  metrics.py  pipeline.py  reports.py  roi_tracker.py
src/td_lead_engine/api/: __init__.py  app.py  auth.py
src/td_lead_engine/bulk/: __init__.py  (+3 more)
templates/landing-pages/: buyer-search.html  home-value.html
tests/: __init__.py  test_documents.py  test_portal.py  test_reviews.py  test_scheduling.py  test_scorer.py  test_social.py
website-integration/: README.md  WEBSITE_LEADS_API.md  add-to-website.sh  deploy.sh
website-integration/cloudflare/: DEPLOY.md  wrangler.toml
website-integration/crm/: index.html
website-integration/redirects/: _redirects
(+219 files in other folders)
